[package]
name = "steno"
version = "0.1.0"
authors = ["Brandon Arp <barp@groupon.com>"]

[dev-dependencies]
fastlog = { version = "*" }
log4rs = { version = "*", features = ["yaml"] }

[dependencies]
log = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
time = "*"
uuid = { version = "*", features = ["serde", "v4"] }
