[package]
name = "steno"
version = "0.1.0"
authors = ["Brandon Arp <barp@groupon.com>"]

[dev-dependencies]
fastlog = { version = "*" }
log4rs = { version = "*" }

[dependencies]
log = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
time = "*"
uuid = { version = "*", features = ["serde", "v4"] }
